# srs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.multistage  README.md  build.sh  clang-tidy.sh  config.json  docker-compose.yaml  docker-compose.yml  run-clang-format.sh  run-clang-tidy.sh  sample.config.json
app/: Dockerfile
backup/: account.hpp  pjsua.h  pjsua_acc.c  pjsua_call.c  sip_siprec.c  sip_siprec.h
include/: Config.hpp  SRSAccount.hpp  SRSCall.hpp
kamailio/: kamailio.cfg
pjproject/build.symbian/: pjsip_ua.mmp
pjproject/pjmedia/src/pjmedia/: sdp.c  sdp_neg.c
pjproject/pjsip-apps/src/samples/: siprtp.c
pjproject/pjsip/include/: pjsip_ua.h
pjproject/pjsip/include/pjsip-ua/: sip_inv.h  sip_siprec.h
pjproject/pjsip/include/pjsua-lib/: pjsua.h
pjproject/pjsip/include/pjsua2/: account.hpp
pjproject/pjsip/src/pjsip/: sip_endpoint.c
pjproject/pjsip/src/pjsip-ua/: sip_inv.c  sip_siprec.c  sip_timer.c
pjproject/pjsip/src/pjsua-lib/: pjsua_call.c  pjsua_core.c  pjsua_media.c
pjproject/pjsip/src/pjsua2/: account.cpp  call.cpp
pjproject1/pjmedia/src/pjmedia/: sdp_neg.c
pjproject1/pjsip/src/pjsip-ua/: sip_inv.c
pjproject1/pjsip/src/pjsua-lib/: pjsua_call.c  pjsua_media.c
pjproject1/pjsip/src/pjsua2/: call.cpp
src/: Config.cpp  SRSAccount.cpp  SRSCall.cpp  SRSCall.hpp  agent.cpp  config.json  main.cpp  server.cpp  user_agent.cpp
